--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="18650, batteries, battery, lithium, Li-Polymer, Li-ion, Life-Po">
 <meta name="description" content="New and used 18650 rechargeble lithium batteries sold here are 100% tested. Offering custom battery pack assembly and more. ">
 <meta name="page_type" content="np-template-header-footer-from-plugin">
-<title>Just 18650's</title>
+<title>Just 18650s</title>
 <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
 <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
