--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 <div class="u-repeater u-repeater-1"><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-1">
 <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-1" src="images/IHR-18650B
-.png"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-1" src="https://just18650s.github.io/images/IHR-18650B.PNG"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-1">
 <a class="u-product-title-link" href="p1.html"><!--product_title_content-->IHR-18650B 2250mah
 <!--/product_title_content--></a>
