--- a/p4.html
+++ b/p4.html
@@ -37,11 +37,14 @@
           </a>
         </div>
         <div class="u-custom-menu u-nav-container">
-          <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="All-Products.html" style="padding: 10px 20px;">All Products</a>
-</li></ul>
+          <ul class="u-nav u-unstyled u-nav-1">
+            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a></li>
+            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a></li>
+            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a></li>
+            <li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="All-Products.html" style="padding: 10px 20px;">All Products</a></li>
+
+          </ul>
+
         </div>
         <div class="u-custom-menu u-nav-container-collapse">
           <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
@@ -65,7 +68,7 @@
               <div class="u-carousel-inner u-gallery-inner" role="listbox"><!--product_gallery_item-->
                 <div class="active u-active u-carousel-item u-gallery-item u-shape-rectangle">
                   <div class="u-back-slide">
-                    <img class="u-back-image u-expanded" src="images/6.svg">
+                    <img class="u-back-image u-expanded" src="images/ab1.jpg">
                   </div>
                   <div class="u-over-slide u-over-slide-1">
                     <h3 class="u-gallery-heading">Sample Title</h3>
@@ -74,7 +77,7 @@
                 </div><!--/product_gallery_item--><!--product_gallery_item-->
                 <div class="u-carousel-item u-gallery-item u-shape-rectangle">
                   <div class="u-back-slide">
-                    <img class="u-back-image u-expanded" src="images/9.svg">
+                    <img class="u-back-image u-expanded" src="images/ab2.jpg">
                   </div>
                   <div class="u-over-slide u-over-slide-2">
                     <h3 class="u-gallery-heading">Sample Title</h3>
@@ -104,39 +107,55 @@
               </a>
               <ol class="u-carousel-thumbnails u-spacing-25 u-carousel-thumbnails-1"><!--product_gallery_thumbnail-->
                 <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-654c" data-u-slide-to="0">
-                  <img class="u-carousel-thumbnail-image u-image" src="images/6.svg">
+                  <img class="u-carousel-thumbnail-image u-image" src="images/ab1.jpg">
                 </li><!--/product_gallery_thumbnail--><!--product_gallery_thumbnail-->
                 <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-654c" data-u-slide-to="1">
-                  <img class="u-carousel-thumbnail-image u-image" src="images/9.svg">
+                  <img class="u-carousel-thumbnail-image u-image" src="images/ab2.jpg">
                 </li><!--/product_gallery_thumbnail-->
               </ol>
             </div><!--/product_gallery--><!--product_title-->
             <h2 class="u-product-control u-text u-text-default u-text-1">
-              <a class="u-product-title-link" href="#"><!--product_title_content-->Product 1 Title<!--/product_title_content--></a>
+              <a class="u-product-title-link" href="#"><!--product_title_content-->Active Balancer <b>3s</b> BMS<!--/product_title_content--></a>
             </h2><!--/product_title--><!--product_price-->
             <div class="u-product-control u-product-price u-product-price-1">
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$17.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$36.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                <div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+</div>
               </div>
             </div><!--/product_price--><!--product_variations-->
             <div class="u-product-control u-product-variations u-product-variations-1"><!--product_variation-->
               <div class="u-product-variant">
-                <label for="product-variant-select-1" class="u-label"><!--product_variation_label_content-->Size<!--/product_variation_label_content--></label>
+
+
+<label for="product-variant-select-1" class="u-label"><!--product_variation_label_content--><b>Description</b><!--/product_variation_label_content--></label>
+
                 <div class="u-form-select-wrapper">
-                  <select id="product-variant-select-1" class="u-border-1 u-border-grey-30 u-grey-10 u-input u-input-rectangle"><!--product_variation_option-->
-                    <option value="Item 1"><!--product_variation_option_content-->XL<!--/product_variation_option_content--></option><!--/product_variation_option--><!--product_variation_option-->
-                    <option value="Item 2"><!--product_variation_option_content-->L<!--/product_variation_option_content--></option><!--/product_variation_option--><!--product_variation_option-->
-                    <option value="Item 3"><!--product_variation_option_content-->M<!--/product_variation_option_content--></option><!--/product_variation_option-->
-                  </select>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="12" version="1" class="u-caret"><path fill="currentColor" d="M4 8L0 4h8z"></path></svg>
+                                  <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="TKL5M774RWH5G">
+                  
                 </div>
               </div><!--/product_variation-->
-            </div><!--/product_variations--><!--product_content-->
+            </div><!--/product_variations--><!--product_content--></form>
+
             <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-              <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p><!--/product_content_content-->
+              <ul><li>Working Voltage: 2.7V-4.2V, suitable for NCM Ternary polymer lithium battery (Li-ion), lithium iron phosphate battery (LiFePO4). It can Not fit LTO battery.</li><br>
+
+<li>Working Principle: Flying capacitor transfer charge transporter, Balancer board is connected to the battery to start the balance work, using the original brand new ultra-low internal resistance MOS, 2OZ copper thickness PCB. Balance current 0-5.5A, the more balanced the battery current is Small, reserved for the dormant switch wiring position, the dormant power-off mode working current is less than 0.1mA, and the balance voltage accuracy is within 5mv!</li><br>
+
+<li>The dormancy current is about 9mA, and the battery capacity is recommended to be used between 30-200AH/Per Balancer. High-capacity batteries can be connected in parallel with multiple equalizers.</li><br>
+
+<li>With under-voltage sleep protection, only detecting the battery voltage of B1, the equalizer will automatically stop entering the sleep state when the B1 voltage is lower than 2.7V, and the standby power consumption is less than 0.1mA.</li><br>
+
+<li>【NOTE】: Before connect the balance cable to the balance board, be sure to check whether the connections of each section of the battery pack are correct, and do a good job of insulating the bottom of the board and the battery string connection terminals. Otherwise, it will short-circuit and burn the board.</li><br>
+
+
+
+              </ul><!--/product_content_content-->
             </div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-            <a href="#" class="u-black u-btn u-button-style u-product-control u-btn-1"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+            <!--/product_button-->
           </div>
         </div><!--/product_item--><!--/product-->
       </div>
