--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 <h4 class="u-product-control u-text u-text-3">
 <a href="p2.html" class="u-product-title-link" href="#"><!--product_title_content-->Bimetal Temperature Control Switch Thermostat<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
-<div class="u-product-control u-product-desc u-text u-text-4"><!--product_content_content-->Robust and sleek design
-LCD and LED display used to view inverter status and programming features<!--/product_content_content--></div><!--/product_content--><!--product_price-->
+<div class="u-product-control u-product-desc u-text u-text-4"><!--product_content_content-->Normally Open Circuit<!--/product_content_content--></div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$12<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
@@ -108,11 +107,11 @@ LCD and LED display used to view inverter status and programming features<!--/pr
 <h4 class="u-product-control u-text u-text-5">
 <a class="u-product-title-link" href="p3.html"><!--product_title_content-->DC Step Down Buck Converter<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
-<div class="u-product-control u-product-desc u-text u-text-6"><!--product_content_content-->Power Supply Module <b>Input</b> volt range is DC 5.3-32V; <b>Output</b> volt range is DC 1.2-32V<!--/product_content_content--></div><!--/product_content--><!--product_price-->
+<div class="u-product-control u-product-desc u-text u-text-6"><!--product_content_content-->Power Supply Module <b>12A</b><!--/product_content_content--></div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-section-2">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$12<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$26.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$34.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
 <a href="p3.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-3"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
@@ -125,12 +124,12 @@ LCD and LED display used to view inverter status and programming features<!--/pr
 <a class="u-product-title-link" href="p4.html"><!--product_title_content-->Active Balancer <b>3s</b> BMS<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-8"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Balance your 30ah/200ah <b>3s</b> battery pack with ease.</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-4">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$25.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$20.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$36.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
 <a href="p4.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-4"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
@@ -138,38 +137,38 @@ LCD and LED display used to view inverter status and programming features<!--/pr
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-5">
 <div class="u-container-layout u-similar-container u-container-layout-5"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-5" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-5" src="images/xt1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-9">
-<a class="u-product-title-link" href="#"><!--product_title_content-->Product 5 Title<!--/product_title_content--></a>
+<a class="u-product-title-link" href="p5.html"><!--product_title_content-->10 Pair XT60H  Connector w/ Sheath<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-10"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Continuous <b>60amp</b> rating!</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-5">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$10.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$7.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-5"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="p5.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-5"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-6">
 <div class="u-container-layout u-similar-container u-container-layout-6"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-6" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-6" src="images/t1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-11">
-<a class="u-product-title-link" href="#"><!--product_title_content-->Product 6 Title<!--/product_title_content--></a>
+<a class="u-product-title-link" href="p6.html"><!--product_title_content-->48v 16 Amp Position Terminal Block for AC DC<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-12"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Support for multiple module extension connections.</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-6">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$175.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$150.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$16.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-6"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="p6.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-6"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-7">
