--- a/p1.html
+++ b/p1.html
@@ -118,20 +118,34 @@
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
                 <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$2.49<!--/product_regular_price_content--></div><!--/product_regular_price-->
-                            
+                      <div><a href="#" class="u-black u-btn u-button-style u-product-control u-btn-3"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+
+              </div>      
 
               </div>
             </div><!--/product_price--><!--product_variations-->
             <div class="u-product-control u-product-variations u-product-variations-1"><!--product_variation-->
               <div class="u-product-variant">
-                <label for="product-variant-select-1" class="u-label"><!--product_variation_label_content--><b>Size</b><!--/product_variation_label_content--></label>
+                <label for="product-variant-select-1" class="u-label"><!--product_variation_label_content--><b>Description</b><!--/product_variation_label_content--></label>
                 <div class="u-form-select-wrapper">
                   
                 </div>
               </div><!--/product_variation-->
             </div><!--/product_variations--><!--product_content-->
             <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-              <p>These cells test on average <b>100%-105% (2323mah)</b> on our spot test of 100 cells using a <b>Litto Kala ii500</b> testing array. These particular Molicel model is trusted by the medical industry which means these are put through rigorous tests so you can expect the highest quality cell which also reflects how well they are testing still after light use. These are made for the Lifevest jackets</p><!--/product_content_content--><div><a href="#" class="u-black u-btn u-button-style u-product-control u-btn-3"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button--></div>
+              <p>These cells test on average <b>100%-105% (2323mah)</b> on our spot test of 100 cells using a <b>Litto Kala ii500</b> testing array. These particular Molicel model is trusted by the medical industry which means these are put through rigorous tests so you can expect the highest quality cell which also reflects how well they are testing still after light use. These are made for the Lifevest jackets</p>
+
+<ul><li><b>Voltage:</b> 3.60V Nominal</li><br>
+<li><b>Charging:</b> 4.20V Maximum
+1250mA Standard
+2200mA Maximum</li><br>
+<li><b>Discharging:</b> 3.00V Cutoff
+450mA Standard
+4400mA Maximum</li><br>
+
+</ul>
+
+              <!--/product_content_content-->
             </div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
           </div>
         </div><!--/product_item--><!--/product-->
