--- a/p3.html
+++ b/p3.html
@@ -120,7 +120,7 @@
             <div class="u-product-control u-product-price u-product-price-1">
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$26.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$34.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
                 <div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 </div>
               </div>
@@ -141,7 +141,16 @@
             </div><!--/product_variations--><!--product_content--></form>
 
             <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-              <p>This Buck Converter is equipped with LCD Display, Acrylic Case and Heat Sink. LCD Screen can display input/output voltage, output current and output power. Voltage precision is 0.05V, current precision is 0.005A. Acrylic case can keep the converter board away from dust, which is protective. Heat Sink can keep module 120W for long-time using in a low temperature. If you want to reach maximum power 160W, please improve heat dissipation buy installing proper size cooling fan with a BIMETAL TEMPERATURE CONTROL SWITCH THERMOSTAT.</p><!--/product_content_content-->
+              <ul><li>This Buck Converter is equipped with LCD Display, Acrylic Case and Heat Sink. LCD Screen can display input/output voltage, output current and output power. Voltage precision is 0.05V, current precision is 0.005A. Acrylic case can keep the converter board away from dust, which is protective. Heat Sink can keep module 120W for long-time using in a low temperature. If you want to reach maximum power 160W, please improve heat dissipation buy installing proper size cooling fan with a <a href="p2.html"> <b>BIMETAL TEMPERATURE CONTROL SWITCH THERMOSTAT</b></a></li><br>
+
+<li><b>Input Voltage:</b> 5.3-32V</li><br>
+<li><b>Output Voltage:</b> 1.2-32V</li><br>
+<li><b>Output Current:</b> 8A</li><br>
+<li><b>Max Output Current:</b> 12A</li><br>
+<li><b>Watt Output:</b> 120watt</li><br>
+<li><b>Max Watt Output:</b> 160watt</li><br>
+
+              </ul>.<!--/product_content_content-->
             </div><!--/product_content--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
             <!--/product_button-->
           </div>
