--- a/p5.html
+++ b/p5.html
@@ -68,7 +68,7 @@
               <div class="u-carousel-inner u-gallery-inner" role="listbox"><!--product_gallery_item-->
                 <div class="active u-active u-carousel-item u-gallery-item u-shape-rectangle">
                   <div class="u-back-slide">
-                    <img class="u-back-image u-expanded" src="images/ab1.jpg">
+                    <img class="u-back-image u-expanded" src="images/xt1.jpg">
                   </div>
                   <div class="u-over-slide u-over-slide-1">
                     <h3 class="u-gallery-heading">Sample Title</h3>
@@ -77,7 +77,7 @@
                 </div><!--/product_gallery_item--><!--product_gallery_item-->
                 <div class="u-carousel-item u-gallery-item u-shape-rectangle">
                   <div class="u-back-slide">
-                    <img class="u-back-image u-expanded" src="images/ab2.jpg">
+                    <img class="u-back-image u-expanded" src="images/xt2.jpg">
                   </div>
                   <div class="u-over-slide u-over-slide-2">
                     <h3 class="u-gallery-heading">Sample Title</h3>
@@ -107,20 +107,20 @@
               </a>
               <ol class="u-carousel-thumbnails u-spacing-25 u-carousel-thumbnails-1"><!--product_gallery_thumbnail-->
                 <li class="u-active u-carousel-thumbnail u-carousel-thumbnail-1" data-u-target="#carousel-654c" data-u-slide-to="0">
-                  <img class="u-carousel-thumbnail-image u-image" src="images/ab1.jpg">
+                  <img class="u-carousel-thumbnail-image u-image" src="images/xt1.jpg">
                 </li><!--/product_gallery_thumbnail--><!--product_gallery_thumbnail-->
                 <li class="u-carousel-thumbnail u-carousel-thumbnail-2" data-u-target="#carousel-654c" data-u-slide-to="1">
-                  <img class="u-carousel-thumbnail-image u-image" src="images/ab2.jpg">
+                  <img class="u-carousel-thumbnail-image u-image" src="images/xt2.jpg">
                 </li><!--/product_gallery_thumbnail-->
               </ol>
             </div><!--/product_gallery--><!--product_title-->
             <h2 class="u-product-control u-text u-text-default u-text-1">
-              <a class="u-product-title-link" href="#"><!--product_title_content-->Active Balancer <b>3s</b> BMS<!--/product_title_content--></a>
+              <a class="u-product-title-link" href="p5.html"><!--product_title_content-->10 PAIR XT60H CONNECTOR W/ SHEATH<!--/product_title_content--></a>
             </h2><!--/product_title--><!--product_price-->
             <div class="u-product-control u-product-price u-product-price-1">
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$36.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
+                <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
                 <div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 </div>
               </div>
@@ -141,15 +141,15 @@
             </div><!--/product_variations--><!--product_content--></form>
 
             <div class="u-product-control u-product-desc u-text u-text-2"><!--product_content_content-->
-              <ul><li>Working Voltage: <b>2.7V-4.2V</b>, suitable for <b>NCM Ternary polymer lithium battery (Li-ion)</b>, <b>lithium iron phosphate battery (LiFePO4)</b>. It is can not compatible <b>LTO</b> battery.</li><br>
+              <ul><li>XT60 Connectors with Snap on Sheaths</li><br>
 
-<li>Working Principle: Flying capacitor transfer charge transporter, Balance board is connected to the battery to start the balance work, using the original brand new ultra-low internal resistance MOS, 2OZ copper thickness PCB. Balance current <b>0-5.5A</b>, current will decrease when near full balance, reserved for the dormant switch wiring position, the dormant power-off mode working current is less than 0.1mA, and the balance voltage accuracy is within <b>5mv</b>!</li><br>
 
-<li>The "<b>dormancy</b>" current is about <b>9mA</b>, and the battery capacity is recommended to be used between <b>30-200AH</b>/Per Active BMS. High-capacity batteries can be connected in parallel with multiple equalizers.</li><br>
+<li><b>Max Current:</b> 60 Amp Continuous</li><br>
+<li>Easy to solder and no heat shrink required
+</li><br>
 
-<li>With under-voltage sleep protection, only detecting the battery voltage of <b>B1</b>, the equalizer will automatically stop entering the sleep state when the B1 voltage is lower than 2.7V, and the standby power consumption is less than <b>0.1mA</b>.</li><br>
 
-<li>【NOTE】: Before connecting the balance cable to the balance board, that the balance leads are in the correct orientation. Be sure to insulate the bottom of the board and the battery string connection terminals. Otherwise, it will short-circuit and burn the board.</li><br>
+
 
 
 
