--- a/About.html
+++ b/About.html
@@ -60,7 +60,7 @@
      <body> <section class="u-clearfix u-section-1" id="sec-1966">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
     <div class="u-text u-text-default u-text-1"><!--product_content_content-->
-              <h2>Here we like to keep things simple. Exact devices and batteries, Looking for something in particular? Don't see it listed? Click the contact link at the top right of the page and we will see what we can do for you. Other than that... <br><br><b>HAPPY D.I.Y-ING!</b><br><br><b>SHIPPING?</b><BR> Shipping is free, very simple <br><br><b>RETURNS?</b><br>Yes we accept returns. Only if you haven't broken the item by incorrectly installing it. You have <b>14 days</b> to return your item. <br><br><b>SERVICES</b> <br>We build custom battery packs from <b>salvaged</b> batteries, and repair electronics.</h2>
+              <h2>Here we like to keep things simple. Exact devices and batteries, Looking for something in particular? Don't see it listed? Click the <a href="contact.html">contact</a> link at the top right of the page, will see what we can do for you. Other than that... <br><br><center><b>HAPPY D.I.Y-ING!</b></center><br><br><b>SHIPPING?</b><BR> Shipping is free, very simple. <br><br><b>RETURNS?</b><br>Yes we accept returns. Only if you haven't broken the item by incorrectly installing it. You have <b>14 days</b> to return your item. <br><br><b>SERVICES</b> <br>We build custom battery packs from <b>salvaged</b> cells, and repair electronics.</h2>
             </body><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></section>
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-e0ab"><div class="u-clearfix u-sheet u-sheet-1">
