--- a/p6.html
+++ b/p6.html
@@ -121,7 +121,7 @@
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
                 <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$16.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
-                <div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                <div><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=CTV25VLQEURLE" target="blank"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 </div>
               </div>
             </div><!--/product_price--><!--product_variations-->
