--- a/p1.html
+++ b/p1.html
@@ -118,7 +118,7 @@
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
                 <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$2.49<!--/product_regular_price_content--></div><!--/product_regular_price-->
-                      <div><a href="#" class="u-black u-btn u-button-style u-product-control u-btn-3"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                      <div><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=46LS59MB2HARQ" class="u-black u-btn u-button-style u-product-control u-btn-3" target="blank"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 
               </div>      
 
@@ -157,15 +157,7 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2022&nbsp; Just 18650's LLC.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
+      
     </section>
   </body>
 </html>
