--- a/p2.html
+++ b/p2.html
@@ -121,7 +121,7 @@ c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C36
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
 <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$4.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
-<div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+<div><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=8BVCUNG9XKWSU" class=" u-label u-black u-btn u-button-style u-product-control u-btn-10" target="blank"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 </div>
 
 </div>
@@ -161,7 +161,6 @@ c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C36
 <p class="u-small-text u-text u-text-variant u-text-1"> © 2022&nbsp; Just 18650's LLC.</p>
 </div></footer>
 <section class="u-backlink u-clearfix u-grey-80">
-<a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
 <span></span>
 </a>
 <p class="u-text">
