--- a/p3.html
+++ b/p3.html
@@ -121,7 +121,7 @@
               <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
                 <div class="u-hide-price u-old-price" style="text-decoration: line-through !important;"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
                 <div class="u-price" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$34.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
-                <div><a href="#"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
+                <div><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=HEKRQXHTM2L2W" target="_blank"  class=" u-label u-black u-btn u-button-style u-product-control u-btn-10"><!--product_button_content-->Add to Cart<!--/product_button_content--></a><!--/product_button-->
 </div>
               </div>
             </div><!--/product_price--><!--product_variations-->
@@ -163,15 +163,10 @@
         <p class="u-small-text u-text u-text-variant u-text-1"> © 2022&nbsp; Just 18650's LLC.</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
       </a>
       <p class="u-text">
-        <span>created with</span>
       </p>
       <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
     </section>
   </body>
 </html>
