--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="og:type" content="website">
 </head>
 
-<body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-black u-clearfix u-header u-sticky u-sticky-702a u-header" id="sec-cb66"><a href="index.html" class="u-image u-logo u-image-1" data-image-width="900" data-image-height="168">
+<body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-black u-clearfix u-header u-sticky u-sticky-702a u-header" id="sec-cb66"><a href="https://just18650s.github.io/" class="u-image u-logo u-image-1" data-image-width="900" data-image-height="168">
 <img src="images/18650logo.jpg" class="u-logo-image u-logo-image-1">
 </a><nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -39,7 +39,7 @@
 </a>
 </div>
 <div class="u-custom-menu u-nav-container">
-<ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="index.html" style="padding: 10px 20px;">Home</a>
+<ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://just18650s.github.io/" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="All-Products.html" style="padding: 10px 20px;">All Products</a>
