--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
 <div class="u-container-layout u-similar-container u-container-layout-7"><!--product_image-->
 <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-7" src="images/7.svg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-13">
-<a class="u-product-title-link" href="#"><!--product_title_content-->Product 1 Title<!--/product_title_content--></a>
+<a class="u-product-title-link" href="#"><!--product_title_content-->rePackr<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-14"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Optimize your battery pack with <b>rePackr!</b></p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-7">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$20.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$17.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->FREE!<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-7"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="rp" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-7"><!--product_button_content-->Try Now<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-8">
