--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-7">
 <div class="u-container-layout u-similar-container u-container-layout-7"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-7" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-7" src="images/rp1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-13">
 <a class="u-product-title-link" href="#"><!--product_title_content-->rePackr<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
