--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <div class="u-container-layout u-similar-container u-container-layout-2"><!--product_image-->
 <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-2" src="images/40c.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-3">
-<a href="p2.html" class="u-product-title-link" href="#"><!--product_title_content-->Bimetal Temperature Control Switch Thermostat<!--/product_title_content--></a>
+<a href="p2.html" class="u-product-title-link" href="#"><!--product_title_content-->Temperature Control Switch Thermostat<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-4"><!--product_content_content-->Normally Open Circuit<!--/product_content_content--></div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-2">
