--- a/sr.html
+++ b/sr.html
@@ -60,7 +60,7 @@
     <section class="u-align-center u-clearfix u-section-1" id="sec-ca4d">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Sorry Currently Out Of Stock...</h1>
-                <h2 class="u-text u-text-default u-text-1">Please fill out form below to we can send a heads up when restocked...</h2>
+                <h2 class="u-text u-text-default u-text-1">Please fill out form below so we can send a heads up when restocked...</h2>
 
         <div class="u-form u-form-1">
 
