--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-8">
 <div class="u-container-layout u-similar-container u-container-layout-8"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-8" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-8" src="images/sp1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-15">
-<a class="u-product-title-link" href="#"><!--product_title_content-->Product 2 Title<!--/product_title_content--></a>
+<a class="u-product-title-link" href="p7.html"><!--product_title_content-->100 Watt 12 Volt Solar Panel, High Efficiency Monocrystalline<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-16"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Reliable Energy | 5.41A</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-8">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
 <div class="u-hide-price u-old-price"><!--product_old_price_content-->$300.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$245.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$99.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-8"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="p7.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-8"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-9">
