--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<meta name="keywords" content="18650, batteries, battery, lithium, Li-Polymer, Li-ion, Life-Po">
+<meta name="keywords" content="18650, batteries, battery, lithium, Li-Polymer, Li-ion, Life-Po, Genuine Ring Doorbell B15169 5-PIN Battery Replacement 1st Gen 3.75V 5000mAh">
 <meta name="description" content="New and used 18650 rechargeble lithium batteries sold here are 100% tested. Offering custom battery pack assembly and more. ">
 <meta name="page_type" content="np-template-header-footer-from-plugin">
 <title>Just 18650s</title>
@@ -209,20 +209,20 @@
 </div><!--/product_item--><!--product_item-->
 <div class="u-align-left u-container-style u-products-item u-repeater-item u-white u-repeater-item-9">
 <div class="u-container-layout u-similar-container u-container-layout-9"><!--product_image-->
-<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-9" src="images/7.svg"><!--/product_image--><!--product_title-->
+<img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-9" src="images/rd1.jpg"><!--/product_image--><!--product_title-->
 <h4 class="u-product-control u-text u-text-17">
-<a class="u-product-title-link" href="#"><!--product_title_content-->Product 3 Title<!--/product_title_content--></a>
+<a class="u-product-title-link" href="p8.html"><!--product_title_content-->Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh<!--/product_title_content--></a>
 </h4><!--/product_title--><!--product_content-->
 <div class="u-product-control u-product-desc u-text u-text-18"><!--product_content_content-->
-<p>I promise to put <b>some'em</b> for sale here.</p><!--/product_content_content-->
+<p>Gaurantee 95% Capacity</p><!--/product_content_content-->
 </div><!--/product_content--><!--product_price-->
 <div class="u-product-control u-product-price u-product-price-9">
 <div class="u-price-wrapper u-spacing-10"><!--product_old_price-->
-<div class="u-hide-price u-old-price"><!--product_old_price_content-->$25.00<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
-<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$19.00<!--/product_regular_price_content--></div><!--/product_regular_price-->
+<div class=" u-hide-price u-old-price"><!--product_old_price_content-->Free Shipping<!--/product_old_price_content--></div><!--/product_old_price--><!--product_regular_price-->
+<div class="u-price u-text-palette-1-base" style="font-size: 1.5rem; font-weight: 700;"><!--product_regular_price_content-->$16.99<!--/product_regular_price_content--></div><!--/product_regular_price-->
 </div>
 </div><!--/product_price--><!--product_button--><!--options_json--><!--{"clickType":"add-to-cart","content":""}--><!--/options_json-->
-<a href="#" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-9"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
+<a href="p8.html" class="u-btn u-btn-rectangle u-button-style u-product-control u-btn-9"><!--product_button_content-->DETAILS<!--/product_button_content--></a><!--/product_button-->
 </div>
 </div><!--/product_item-->
 </div>
