--- a/p8.html
+++ b/p8.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="INTUITIVE">
+    <meta name="keywords" content="Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Product Details</title>
+    <title>Genuine Ring Doorbell B15169 Battery 1st Gen 3.75V 5000mAh</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Product-Details.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
